# lxqt-panel

cmake/: FindXCB.cmake
panel/: CMakeLists.txt  lxqtpanel.cpp  lxqtpanel.h  lxqtpanelapplication.cpp  lxqtpanelapplication.h  lxqtpanellayout.cpp  lxqtpanellayout.h  lxqtpanellimits.h  plugin.cpp  plugin.h
panel/config/: configpaneldialog.cpp  configpaneldialog.h  configpaneldialog.ui
plugin-mount/: lxqtmountplugin.cpp  lxqtmountplugin.h
plugin-taskbar/: CMakeLists.txt  lxqttaskbar.cpp
plugin-volume/: lxqtvolume.cpp  lxqtvolume.h
